# nador_engine

./: .clang-format  .gitignore  CMakeLists.txt  TODO.txt  app_config.xml  main.cpp  win_example.cpp
demo/src/: Assets.h  Audio.h  (+3 more)
libnador/: CMakeLists.txt
libnador/atlas_maker/: AtlasImage.cpp  AtlasImage.h  CMakeLists.txt  FileUtil.cpp  FileUtil.h  IImage.h  IReferenceCounter.h  Image.cpp  Image.h  ImageContainer.hpp  ImageManager.hpp  ImageUtils.cpp  ImageUtils.h  Main.cpp  RefCountTestClass.hpp  SimpleAtlas.hpp  SimpleAtlasGenerator.cpp  SimpleAtlasGenerator.h  SimpleImage.cpp  SimpleImage.h  SimpleImageManager.hpp  Stack.hpp  Test.cpp  Test.h  Types.h  Vec2d.hpp  cimage.h
libnador/atlas_maker/dep/libjpeg/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  croptest  installer.nsi  jconfigint.h  tjbenchtest  tjexampletest
libnador/atlas_maker/dep/libjpeg/md5/: Makefile  cmake_install.cmake
libnador/atlas_maker/dep/libjpeg/pkgscripts/: atlas_makerConfig.cmake  libjpeg.pc  libturbojpeg.pc  maketarball
libnador/atlas_maker/dep/libjpeg/simd/: Makefile  cmake_install.cmake
libnador/atlas_maker/dep/libjpeg/win/: atlas_makerTargets-release.cmake  atlas_makerTargets.cmake
libnador/atlas_maker/dep/libpng/: CTestTestfile.cmake  cmake_install.cmake
libnador/atlas_maker/dep/libpng/projects/visualc71/: UpgradeLog.htm  libpng.sln  libpng.vcxproj  libpng.vcxproj.filters  pngtest.vcxproj  pngtest.vcxproj.filters  zlib.vcxproj  zlib.vcxproj.filters
libnador/atlas_maker/dep/libpng/projects/vstudio/: vstudio.sln
libnador/atlas_maker/dep/libpng/scripts/: genchk.cmake  genout.cmake  gensrc.cmake
libnador/atlas_maker/dep/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libnador/dep/glew/: glew.pc
libnador/nador/: App.cpp  App.h  IApp.cpp  IApp.h
libnador/nador/common/: AppConfig.h  Barrier.h  Finally.h  FutureWaiter.h  GlobalEvents.cpp  GlobalEvents.h  GlobalListener.cpp  GlobalListener.h  KeyCodes.h  Mouse.h  MoveableObjWrapper.h  PackedSequenceUtils.h  Stopwatch.h  ThreadPool.cpp  ThreadPool.h  ThreadUtils.h
libnador/nador/config/: AppConfig.h
libnador/nador/config/settings/: AtlasSettings.h  VideoSettings.h  WindowSettings.h
libnador/nador/log/: ILog.cpp  ILog.h  Log.cpp  Log.h  StandardLogger.cpp  StandardLogger.h  StreamLogger.cpp  StreamLogger.h
libnador/nador/sound/: ISoundController.h
libnador/nador/sound/open_al/: OpenALSoundController.h  OpenAlSoundController.cpp
libnador/nador/system/: Factory.cpp  Factory.h  IFactory.h  IFileController.h  IInputController.h  IWindow.h  ModuleFactory.cpp  ModuleFactory.h
libnador/nador/system/file/: DefaultFileController.cpp  DefaultFileController.h  FileData.h  WindowsFileController.cpp  WindowsFileController.h
libnador/nador/system/input/: GLFWInputController.cpp  GLFWInputController.h  SDLInputController.cpp  SDLInputController.h
libnador/nador/system/input/input_events/: InputEvents.cpp  InputEvents.h
libnador/nador/system/window/: IImGuiAdapter.h  WindowGLFW.cpp  WindowGLFW.h  WindowSDL.cpp  WindowSDL.h
libnador/nador/test/: CameraWindow.h  DebugMenu.cpp  DebugMenu.h  ITest.h  ITestController.h  ITestFwd.h  TestCommon.cpp  TestCommon.h  TestController.cpp  TestController.h  Tests.h
libnador/nador/test/test_views/: AnimationTest.cpp  AnimationTest.h  AtlasTest.cpp  AtlasTest.h  BaseMaterialTest.h  ClearColorTest.cpp  ClearColorTest.h  FontTest.cpp  FontTest.h  InputTest.cpp  InputTest.h  RoundEdgeMaterialTest.h  SimpleLineTest.h  SoundTest.cpp  SoundTest.h  TextureTest.cpp  TextureTest.h  UiElementsTest.cpp  UiElementsTest.h  UiSquareTest.cpp  UiSquareTest.h
libnador/nador/ui/: IUiApp.h  IUiElement.cpp  IUiElement.h  IUiLogicState.h  UiAligner.cpp  UiAligner.h  UiApp.cpp  UiApp.h  UiButton.cpp  UiButton.h  UiCommon.cpp  UiCommon.h  UiEdgeDrawer.cpp  UiEdgeDrawer.h  UiEditText.cpp  UiEditText.h  UiImage.cpp  UiImage.h  UiLogicState.cpp  UiLogicState.h  UiOverlay.cpp  UiOverlay.h  UiParser.cpp  UiParser.h  UiScene.cpp  UiScene.h  UiScrollList.cpp  UiScrollList.h  UiTextLabel.cpp  UiTextLabel.h
libnador/nador/utils/: CppMacros.h  ImGuiHelper.cpp  ImGuiHelper.h  IntervalCounter.h  LRUCache.hpp  NonCopyable.h  Sequence.h  TickTracker.cpp  TickTracker.h  Time.h  TinyXmlHelper.cpp  TinyXmlHelper.h  Types.h  Utils.cpp  Utils.h
libnador/nador/utils/event/: Event.h  EventListener.h
libnador/nador/video/: IVideo.h  StbImageLoadStrategy.cpp  StbImageLoadStrategy.h  TextureLoader.cpp  TextureLoader.h
libnador/nador/video/atlas/: Atlas.cpp  Atlas.h  AtlasConfigParser.cpp  AtlasConfigParser.h  AtlasController.cpp  AtlasController.h  IAtlasController.h
libnador/nador/video/buffers/: IndexBuffer.cpp  IndexBuffer.h  Texture.cpp  Texture.h  TextureSettings.h  VertexBuffer.cpp  VertexBuffer.h
libnador/nador/video/font/: Font.cpp  Font.h  FontController.cpp  FontController.h  FontTextureLoadStrategy.h  IFontController.h
libnador/nador/video/material/: Material.cpp  Material.h
libnador/nador/video/opengl3/: APIOpenGL3.cpp  APIOpenGL3.h  VideoOpenGL3.cpp  VideoOpenGL3.h
libnador/nador/video/opengl3/shaders/: ShaderOpenGL3.cpp  ShaderOpenGL3.h
libnador/nador/video/renderer/: Camera.cpp  Camera.h  IRenderPlugin.h  IRenderer.h  ISimpleRenderer.h  RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h
libnador/nador/video/renderer/base_renderer/: BaseRenderer.cpp  BaseRenderer.h
libnador/nador/video/renderer/batch_renderer/: BatchRenderData.cpp  BatchRenderData.h  BatchRenderer.cpp  BatchRenderer.h
libnador/nador/video/renderer/simple_renderer/: SimpleRenderer.cpp  SimpleRenderer.h
libnador/nador/video/shader/: IShaderController.h  Shader.cpp  Shader.h  ShaderController.cpp  ShaderController.h
libnador/test/: CMakeLists.txt  appconfig_test.cpp  nador_app_test.cpp
libnador/unit_testing/: CMakeLists.txt  appconfig_test.cpp  eventListener_test.cpp  fileController_test.cpp  sequence_test.cpp  threadpool_test.cpp
libnador/unit_testing/src/: LRUCache_test.cpp  appconfig_test.cpp  eventListener_test.cpp  sequence_test.cpp  threadpool_test.cpp
scripts/: prefix_add.py
(+123 files in other folders)
